--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
-		"generate:api": "openapi-typescript ./src/api/schema/api-docs.json -o ./src/api/types/schema.d.ts",
+		"generate:api": "openapi-typescript ./src/api/schema/openapi.json -o ./src/api/types/schema.d.ts",
 		"format": "biome format --write .",
 		"lint": "biome lint --write .",
 		"check": "biome check --write .",
@@ -30,7 +30,7 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^1.9.4",
 		"@faker-js/faker": "^9.6.0",
 		"@playwright/test": "^1.51.0",
 		"@tsconfig/node22": "^22.0.0",
@@ -50,6 +50,8 @@
 		"vue-tsc": "^2.2.8"
 	},
 	"msw": {
-		"workerDirectory": ["public"]
+		"workerDirectory": [
+			"public"
+		]
 	}
 }
